--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,8 @@
     <!--  <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
          <h2 class="m-0"><img class="w-100" src="img/logos.jpg" alt="Image"></h2>
      </a>-->
+
+     <h2 class="m-0"><img src="img/logos.jpg" height="60" width="60" alt="Image"></h2>
      <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
          <span class="navbar-toggler-icon"></span>
      </button>
